# GetAGrip

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: Cargo.toml  tauri-wayland.sh  tauri.conf.json  tauri.sh
apps/desktop/capabilities/: default.json
apps/desktop/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/frontend/src/: App.svelte  app.css  main.ts
apps/desktop/frontend/src/components/: BreadcrumbNav.svelte  CommandPalette.svelte  ConnectModal.svelte  ContextMenu.svelte  CustomSuggestWidget.svelte  DataSourceForm.svelte  DataSourceList.svelte  DataSourceTree.svelte  DiagnosticsPanel.svelte  DriverIcon.svelte  DropZone.svelte  Dropdown.svelte  EditorPane.svelte  EditorTabs.svelte  ExplorerTree.svelte  HistoryPanel.svelte  HoverWidget.svelte  LspSettingsModal.svelte  MenuBar.svelte  MonacoEditor.svelte  NodeIcon.svelte  NotificationHistory.svelte  ResizeHandle.svelte  ResultGrid.svelte  ResultTabs.svelte  ResultsGrid.svelte  ResultsPanel.svelte  SettingsModal.svelte  SidePanel.svelte  SplitEditor.svelte  StatusBar.svelte  TabToolbar.svelte  TerminalPanel.svelte  TitleBar.svelte  Toast.svelte  TreeFolder.svelte
apps/desktop/frontend/src/lib/: connection.ts  gridWorker.ts  stores.ts  tauri.ts  themes.ts  toast.ts  treeState.ts
apps/desktop/src/: main.rs  state.rs  ui.rs
apps/desktop/src/commands/: connect.rs  datasources.rs  explorer.rs  export.rs  history.rs  intelligence.rs  introspect.rs  lsp.rs  mod.rs  pty.rs  query.rs  settings.rs  util.rs
apps/desktop/ui/: app.slint  components.slint
crates/config/: Cargo.toml
crates/config/src/: lib.rs  settings.rs
crates/core/: Cargo.toml
crates/core/src/: cancel.rs  config.rs  error.rs  events.rs  id.rs  lib.rs  result.rs  secrets.rs  time.rs
crates/core/src/traits/: ai.rs  connection.rs  driver.rs  export.rs  mod.rs  plugin.rs  theme.rs
crates/core/src/types/: column.rs  connection.rs  database.rs  mod.rs  query.rs
crates/database/: Cargo.toml
crates/database/src/: connection.rs  driver.rs  lib.rs  manager.rs  pool.rs  registry.rs
crates/database/src/drivers/: mod.rs  sqlite.rs  sqlserver.rs
crates/editor/: Cargo.toml
crates/explorer/: Cargo.toml
crates/getagrip-core/: Cargo.toml
crates/getagrip-core/src/: config.rs  error.rs  events.rs  id.rs  lib.rs  secrets.rs  session.rs
crates/getagrip-database/: Cargo.toml
crates/getagrip-database/src/: driver.rs  lib.rs  manager.rs  pool.rs
crates/getagrip-driver-postgres/: Cargo.toml
crates/getagrip-driver-postgres/src/: lib.rs
crates/getagrip-driver-sqlserver/: Cargo.toml
crates/getagrip-driver-sqlserver/src/: lib.rs
crates/getagrip-editor/: Cargo.toml
crates/getagrip-editor/src/: lib.rs  model.rs
crates/getagrip-explorer/: Cargo.toml
crates/getagrip-explorer/src/: lib.rs  tree.rs
crates/getagrip-intelligence/: Cargo.toml
crates/getagrip-intelligence/src/: completion.rs  context.rs  diagnostics.rs  lib.rs  lsp_client.rs  metadata.rs  types.rs
crates/getagrip-plugins/: Cargo.toml
crates/getagrip-plugins/src/: lib.rs
crates/getagrip-query_engine/: Cargo.toml
crates/getagrip-query_engine/src/: executor.rs  history.rs  lib.rs  scheduler.rs
crates/getagrip-results/: Cargo.toml
crates/getagrip-results/src/: export.rs  grid.rs  lib.rs
crates/getagrip-schema/: Cargo.toml
crates/getagrip-schema/src/: comparison.rs  introspection.rs  lib.rs  migration.rs  snapshot.rs
crates/getagrip-settings/: Cargo.toml
crates/getagrip-settings/src/: lib.rs
crates/getagrip-sql/: Cargo.toml
crates/getagrip-sql/src/: diagnostics.rs  parser.rs
crates/getagrip-telemetry/: Cargo.toml
crates/getagrip-telemetry/src/: lib.rs
crates/getagrip-themes/: Cargo.toml
crates/getagrip-themes/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/query-engine/: Cargo.toml
crates/query-engine/src/: completion.rs  executor.rs  explain.rs  formatter.rs  lib.rs  parser.rs
crates/query_engine/: Cargo.toml
crates/query_engine/src/: executor.rs  history.rs  scheduler.rs
crates/results/: Cargo.toml
crates/schema/: Cargo.toml
crates/settings/: Cargo.toml
crates/sql/: Cargo.toml
crates/sql/src/: formatter.rs  lib.rs  parser.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/themes/: Cargo.toml
crates/themes/src/: builtin.rs  lib.rs  manager.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  input.rs  keybindings.rs  main.rs  state.rs  views.rs
crates/ui/src/components/: mod.rs
docker/: README.md
docker/init/mongo/: 01_seed.js
docker/init/mysql/: 01_seed.sql  02_load_test.sql
docker/init/postgres/: 01_seed.sql  02_load_test.sql
