[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/config",
    "crates/themes",
    "crates/database",
    "crates/query-engine",
    "crates/telemetry",
    "crates/plugins",
    "crates/ui",
]
default-members = ["crates/ui"]

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/DevDad-Main/GetAGrip"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
ron = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"
miette = "7"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
opentelemetry = "0.27"

# Database drivers
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
tokio-postgres = "0.7"
mysql_async = "0.34"
duckdb = { version = "1", features = ["bundled"] }
redis = { version = "0.27", features = ["tokio-comp"] }
mongodb = { version = "3", features = ["sync"] }

# TUI framework
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"

# Parser
tree-sitter = "0.24"

# Data formats
csv = "1"
parquet = "53"
arrow = "53"
calamine = "0.26"
avro-rs = "0.14"

# Encoding
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
smallvec = "1"
hashbrown = "0.15"
dashmap = "6"
parking_lot = "0.12"

# SSH tunnels
ssh2 = "0.9"
russh = "0.45"

# Keyring / password vault
keyring = "3"

# AI / LLM
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"

# Plugin system
wasmtime = "27"
mlua = "0.10"
libloading = "0.8"

# Templating
tera = "1"
handlebars = "6"

# Graph / layout
petgraph = "0.7"

# Compression
flate2 = "1"
zstd = "0.13"

# Misc
dirs = "5"
once_cell = "1"
regex = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
url = "2"
itertools = "0.14"
rayon = "1"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
config = "0.14"

# Internal crates
tg-core = { path = "crates/core" }
tg-config = { path = "crates/config" }
tg-themes = { path = "crates/themes" }
tg-database = { path = "crates/database" }
tg-query-engine = { path = "crates/query-engine" }
tg-telemetry = { path = "crates/telemetry" }
tg-plugins = { path = "crates/plugins" }
tg-ui = { path = "crates/ui" }

[workspace.lints.rust]
unsafe_code = "deny"



[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
