[workspace]
members = ["crates/*", "apps/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
authors = ["GetAGrip Contributors"]
repository = "https://github.com/DevDad-Main/GetAGrip"
description = "GetAGrip — a modern, cross-platform database IDE built with Rust + Tauri + Svelte + Monaco"
keywords = ["database", "sql", "ide", "gui", "rust", "tauri", "svelte", "monaco", "getagrip"]
categories = ["database", "development-tools", "gui"]

[workspace.dependencies]
# Tauri
tauri = { version = "2", features = ["devtools"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Errors
thiserror = "2.0"
anyhow = "1.0"
miette = { version = "7.5", features = ["fancy"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# SQL parsing
sqlparser = { version = "0.54", features = ["visitor", "serde"] }

# Config
figment = { version = "0.10", features = ["toml", "yaml", "json", "env"] }
dirs = "6.0"

# IDs
uuid = { version = "1.13", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Crypto
ring = "0.17"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# Concurrency
parking_lot = "0.12"
dashmap = "6.1"
indexmap = { version = "2.7", features = ["serde"] }
crossbeam-channel = "0.5"

# Database drivers
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "chrono", "bigdecimal"] }
tokio-util = { version = "0.7", features = ["compat"] }
rustls = "0.23"
rustls-pemfile = "2"

# Misc
regex = "1.11"
unicode-segmentation = "1.12"
strum = { version = "0.26", features = ["derive"] }
derive_more = { version = "2.0", features = ["full"] }
regex-automata = "0.4"

# Testing
insta = { version = "1.43", features = ["json"] }
proptest = "1.6"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
dead_code = "warn"
unused_imports = "warn"
future_incompatible = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "allow"
cargo = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"

[profile.dev]
opt-level = 1
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
