[package]
name = "getagrip"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GetAGrip — a modern, cross-platform database IDE (Tauri + Svelte + Monaco)"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Core crates
getagrip-core = { path = "../../crates/getagrip-core" }
getagrip-database = { path = "../../crates/getagrip-database" }
getagrip-sql = { path = "../../crates/getagrip-sql" }
getagrip-explorer = { path = "../../crates/getagrip-explorer" }
getagrip-results = { path = "../../crates/getagrip-results" }
getagrip-settings = { path = "../../crates/getagrip-settings" }
getagrip-themes = { path = "../../crates/getagrip-themes" }
getagrip-query-engine = { path = "../../crates/getagrip-query_engine" }
getagrip-driver-sqlserver = { path = "../../crates/getagrip-driver-sqlserver" }
getagrip-driver-postgres = { path = "../../crates/getagrip-driver-postgres" }
getagrip-intelligence = { path = "../../crates/getagrip-intelligence" }
getagrip-schema = { path = "../../crates/getagrip-schema" }
getagrip-telemetry = { path = "../../crates/getagrip-telemetry" }
which = "8"

# Tauri
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-dialog = { workspace = true }

# Async runtime
tokio = { workspace = true }
parking_lot = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Encoding
base64 = { workspace = true }

# PTY for terminal emulation
pty = { version = "0.2" }
libc = "0.2"
anyhow = "1.0"
