[package]
name = "getagrip-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GetAGrip core: errors, ids, events, config, secrets, session."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
miette = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
unicode-segmentation = { workspace = true }
strum = { workspace = true }
derive_more = { workspace = true }
dirs = { workspace = true }
figment = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
aes-gcm = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tempfile = "3"
