[package]
name = "getagrip-database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GetAGrip: database driver abstraction layer."

[dependencies]
getagrip-core = { path = "../getagrip-core" }
tokio = { workspace = true }
serde = { workspace = true }
async-trait = "0.1"
bitflags = "2"
uuid = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
