[package]
name = "getagrip-explorer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GetAGrip: database explorer tree and data viewer."

[dependencies]
getagrip-core = { path = "../getagrip-core" }
getagrip-database = { path = "../getagrip-database" }
serde = { workspace = true }
