[package]
name = "getagrip-settings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GetAGrip: settings UI and persistence."

[dependencies]
getagrip-core = { path = "../getagrip-core" }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
