[package]
name = "getagrip-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GetAGrip: SQL parser and intelligence engine."

[dependencies]
getagrip-core = { path = "../getagrip-core" }
sqlparser = { workspace = true }
serde = { workspace = true }
