[package]
name = "tg-query-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GetAGrip SQL query engine: parsing, execution, explain plans"

[dependencies]
tg-core.workspace = true
tg-database.workspace = true
tg-telemetry.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
bytes.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
tree-sitter.workspace = true
itertools.workspace = true
regex.workspace = true
hashbrown.workspace = true
smallvec.workspace = true
uuid.workspace = true

[lints]
workspace = true

[features]
default = []
