[package]
name = "atlas-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GetAGrip: schema introspection and comparison."

[dependencies]
atlas-core = { path = "../core" }
atlas-database = { path = "../database" }
serde = { workspace = true }
