[package]
name = "atlas-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GetAGrip: SQL parser and intelligence engine."

[dependencies]
atlas-core = { path = "../core" }
sqlparser = { workspace = true }
serde = { workspace = true }
