[package]
name = "atlas-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GetAGrip: structured logging and tracing."

[dependencies]
atlas-core = { path = "../core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
