[package]
name = "tg-themes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GetAGrip theme system and built-in themes"

[dependencies]
tg-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
parking_lot.workspace = true
ratatui.workspace = true

[lints]
workspace = true
