[package]
name = "tg-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GetAGrip terminal user interface"
default-run = "getagrip"

[[bin]]
name = "getagrip"
path = "src/main.rs"

[dependencies]
tg-core.workspace = true
tg-config.workspace = true
tg-themes.workspace = true
tg-database.workspace = true
tg-query-engine.workspace = true
tg-telemetry.workspace = true
tg-plugins.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
miette.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tui-textarea.workspace = true
clap.workspace = true
dirs.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite.workspace = true
itertools.workspace = true
toml.workspace = true

[lints]
workspace = true

[features]
default = []
debug-ui = []
